# B8_Project

./: .gitignore  README.md  tempCodeRunnerFile.python
Analysis/: TrackAnalysis.ipynb  collision_analysis.ipynb  fit_tracks.py  helix_fitting.py  histogram_example.ipynb  track_analysis.ipynb  track_analysis2.ipynb  tracking_performance.ipynb
Analysis/output/: B_1T_500_15000_500_pion.csv
CollisionSimulation/: CollisionSimulation  CollisionSimulation.cpp  electron_proton.hepmc
DetectorSimulation/: CMakeLists.txt  DetectorSimulation.cc  DetectorSimulation.in  GNUmakefile  Run0_t1.root  Run0_t4.root  Run0_t7.root  gui.mac  output.root  run2.mac  vis.mac
DetectorSimulation/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunActionMessenger.hh  SteppingAction.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh
DetectorSimulation/macros/: BField_0_5T.mac  BField_1_0T.mac  BField_2_5T.mac  default.mac  gun_electrons.mac  gun_kaons.mac  gun_positrons.mac  gun_protons.mac  material_x2.mac  material_x3.mac  material_x4.mac  resolution_10um.mac  resolution_13um.mac  resolution_15um.mac  resolution_25um.mac  resolution_3um.mac  resolution_4um.mac  test.mac
DetectorSimulation/output/: output.root  run_20260207211028.717230_t5.root  run_20260207232303.597862_t3.root
DetectorSimulation/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunActionMessenger.cc  SteppingAction.cc  TrackerHit.cc  TrackerSD.cc  TrackingAction.cc
Report/: B8_Report.aux  B8_Report.bbl  B8_Report.blg  B8_Report.out  B8_Report.tex  references.bib
exampleB2/: CMakeLists.txt  G4History.macro
exampleB2/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh
exampleB2/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  PrimaryGeneratorAction.cc
examplePythia/: examplePythia  examplePythia.cpp
